--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,11 @@ jobs:
     - name: Check out the source code
       uses: actions/checkout@v2
 
+
     - name: Test the project
       run: |
         eldev -p -dtT test
+
+    - name: Lint the project
+      run: |
+        eldev lint
